--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -46,12 +46,14 @@ label {
  border-radius: 7px;
  height: 56px;
  margin: 10px auto;
+ padding: 1px;
 }
 input{
  border: 1px solid transparent;
  outline: none;
  margin-top:12px;
- margin-left: 15px;
+ padding-left: 15px;
+ width: 100%;
 
 }
 input[type=number]{
@@ -77,6 +79,7 @@ input[type=number]{
 }
 .button-input,.button-label {
   display: inline-block;
+  padding-left: 10px;
 }
 .cash-on-delivery, .eMoney{
   display: flex;
@@ -84,7 +87,8 @@ input[type=number]{
   align-items: center
 }
 .eMoney{
-  border: 1px solid #D87D4A; 
+  border: 1px solid #D87D4A;
+  
 }
 ::placeholder{
   font-size: 14px;
@@ -340,4 +344,27 @@ input[type=number] {
    margin: 20px auto;
    width: 80%;
    letter-spacing: 1px;
+ }
+ @media only screen and (min-width: 600px){
+   .name-address-outer-container{
+     display: flex;
+     gap: 11px;
+
+   }
+   .name-address-container{
+     width: 100%;
+   }
+   .phone-input-box{
+     width: 49%;
+     margin-left: 0;
+   }
+   .payment-method{
+     width: 50%;
+   }
+   .e-money-querry{
+     margin-left:51% 
+   }
+   .eMoney{
+     width: 50%;
+   }
  }
