--- a/views/_shared-page.pug
+++ b/views/_shared-page.pug
@@ -16,6 +16,7 @@
    span &gt;
 .card.home-page-man-picture 
  img.card-img-top(src='/images/shared/mobile2/image-best-gear.jpg')
+ img.tab-image-only(src='/images/shared/tablet/image-best-gear.jpg')
  .card-body.conten-holder 
   h2.card-title.content-header BRINGING YOU THE #[span BEST] AUDIO GEAR
   p.card-text.content-text Located at the heart of New Your City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demostration rooms availabel for you to browse and experience a wide ranfe of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.
