--- a/public/stylesheets/_product.css
+++ b/public/stylesheets/_product.css
@@ -1,12 +1,16 @@
 .product-container {
  width: 100%;
- max-width: 600px;
+ 
+}
+.product-holder-container{
+ width: 90%;
+ margin: auto;
 }
 .product-image{
  display: block;
  margin: auto;
- width: 90%;
  border-radius: 9px;
+ width: 90%;
 }
 .product-page-header{
  background-color: #191919;
@@ -47,9 +51,40 @@
  
 }
 .see-product{
- margin-right: 35%;
- margin-left: 35%;
- margin-bottom: 6rem; 
- margin-top: 1rem;
+ display: block;
+ margin: auto;
+ margin-top: 20px;
+ margin-bottom: 10%;
+ 
+ 
+}
+.product-image-container{
+ margin-top: 20px;
+ 
+}
+.tab-image-only{
+ display: none !important;
+}
+ .mobile-image-only{
+  display:block;
+ }
+@media only screen and (min-width: 600px){
+ .product-container {
+ width: 100%;
+ margin: auto;
+ 
 
+ }
+ .product-page-header {
+  width: 100%;
+
+ }
+ .mobile-image-only{
+  display: none !important;
+ }
+ .tab-image-only{
+ display: block !important;
+ 
+
+}
 }
