--- a/public/stylesheets/_header.css
+++ b/public/stylesheets/_header.css
@@ -12,7 +12,6 @@
 #phone-nav-container{
   background-color: #191919; 
   font-family: 'Poppins', sans-serif;
-  
   margin: 0 auto;
   border-bottom: 0.01em solid rgba(151, 151, 151, .4);
   
@@ -20,7 +19,10 @@
 }
 .navbar-toggler{
   border: 1px solid transparent !important;
-  margin-left: 2px !important;
+  margin: 0;
+  width: max-content; 
+  box-shadow: none !important;
+  padding: 0;
 }
 .nav-link{
  font-size:1rem !important;
@@ -28,6 +30,10 @@
 .nav-bar-size{
   width:100% !important;
 }
+.navbar-nav{
+  margin-left: 2px;
+  padding: 0;
+} 
 /*Add to Cart css*/
 .cart-text{
   font-size: 18px;
@@ -124,3 +130,47 @@
   height: 32px !important;
 }
 }
+@media only screen and (min-width: 992px){
+  .wide-screen-tab{
+    grid-column: 2/ span 4;
+    grid-row-start: 1;
+  }
+  .navbar-nav{
+    margin: auto;
+  }
+  .logo-box{
+    padding-left: 0;
+  }
+  .phone-nav{
+    padding-left: 5%;
+    
+  }
+  #phone-nav-container{
+    border-bottom: 1px solid transparent;
+  }
+  .navbar{
+    border-bottom: 0.01em solid rgba(151, 151, 151, .4);
+    padding: 0;
+    width: 82% !important;
+    margin: auto;
+    padding-bottom: 2rem;
+    padding-top: 1.5rem;
+  }
+  .cart-button{
+    width: fit-content;
+    margin-left: 78%;
+  }
+
+
+  .navbar-dark .navbar-nav .nav-link{
+    font-size: 13px;
+    letter-spacing: 2px;
+    opacity: 1;
+    font-weight: 500px;
+    color: #fff;
+}
+
+}
+ 
+    
+  
