--- a/public/stylesheets/_home-page.css
+++ b/public/stylesheets/_home-page.css
@@ -65,18 +65,28 @@
 .product-preview{
  background-color: #FFF;
  text-align: center;
- padding-top: 3rem;
- position: relative;
- margin-top:30px;
+ padding-top: 6rem;
+ width: 90%;
+ margin: auto;
+  margin-top:30px;
 }
-.product-preview img{
-  object-fit: contain;
- display: block;
- position: absolute
+.preview-boxes{
+  position: relative;
+  width: 100%;
+  margin: auto;
+}
+.image-positioning{
+  position: absolute;
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 150px;
+  left: 0;
+  right: 0;
+  bottom: 60%;
 }
 
 .preview-containers{
- width:90%;
+ width:100%;
  height: 185px;
  margin-right: auto;
  margin-left: auto;
@@ -88,28 +98,9 @@
 .preview-headers{
  padding-top: 88px;
 }
-.headphones{
- width: auto;
- height:130px;
- bottom: 75%;
- bottom: 84%;
- left: 38%;
- 
-}
-.speakers{
- width: auto;
- height:170px;
- bottom: 48%;
- left:33%;
 
-}
-.earphones{
- width: auto;
- height: 150px;
- bottom: 15%;
- left: 35%;
  
-}
+
 .preview-headers{
  font-weight: bold;
  font-size:15px;
@@ -136,13 +127,17 @@
 .home-page-product-action-page{
  height:auto;
  width:90%;
- margin: 2rem auto;
- position:relative;
- overflow: hidden;
+ margin: auto;
+overflow: hidden;
  text-align: center;
  background-color: #D87D4A;
  border-radius: 8px;
  min-height: max-content;
+ margin-bottom: 2%;
+ margin-top:2rem;
+}
+.home-page-product-first-container{
+   position:relative;
 }
 .product-page-speaker{
  height:420px;
@@ -202,14 +197,20 @@
 .zx7-speaker-products{
  background-image: url(/images/mobile-home/image-speaker-zx7.jpg);
  height:auto;
- background-position:center center;
+ 
  background-repeat:no-repeat;
- background-size: 100%;
+ background-size: 100% 100%;
  width:90%;
  margin:auto;
- object-fit: contain;
+
  border-radius: 8px;
  min-height: 370px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ padding-left:5%;
+ gap: 10px;
+ background-position: 50% 50%;
  
  min-height: fit-content (320px);
 }
@@ -219,9 +220,7 @@
  letter-spacing: 2px;
  font-weight:500;
  color:#000;
- padding-top:25%;
- padding-left: 5%;
- padding-bottom:4%;
+
 }
 .black-earphones-case-picture-tablet, .tab-pic{
   display: none;
@@ -229,7 +228,7 @@
 .zx7-button{
  width: 180px;
  height: 50px;
- margin-left: 5%;
+
  font-weight:700;
  font-size: 13px;
  border: 1px solid black;
@@ -289,6 +288,9 @@
 
 
 }
+.desktop-img{
+  display: none;
+}
 .content-header span{
  color: #D87D4A;
 }
@@ -305,6 +307,9 @@
   font-size: 28px;
   
 }
+.container-for-black-earphone{
+  margin-top: 2%;
+}
 
 @media only screen and (min-width: 600px) {
 .blackbackground-headphone-image{ 
@@ -317,30 +322,8 @@ body{
 }
 .product-preview{
   display: flex;
-  gap: 8px;
-  padding-left: 5%;
-  padding-right: 5%;
-}
-.product-preview img{
-  position: absolute;
-  margin-left: auto; 
-  margin-right: auto; 
-  width: 150px;
-}
-.headphones{
-  right: 60%;
-  left: 0;
-  top: 0;
-  bottom: 2px;
-}
-.speakers{
-  bottom: 50%;
-  left:  40%;
-
-}
-.earphones{
-  left: 70%;
-  bottom:50%;
+  gap: 30px;
+ 
 }
 .preview-containers{
   margin-bottom: 3rem;
@@ -359,6 +342,9 @@ body{
 }
 .zx7-speaker-products{
   background-image: url(/images/tablet-home/image-speaker-zx7.jpg);
+  margin-bottom: 0;
+  
+
   
   
 }
@@ -377,6 +363,9 @@ body{
 }
 .black-earphones-case-picture, .card-img-top{
   display: none;
+}
+.black-earphones-case-picture-tablet{
+  width: 100%;
 }
 .yx1-earphone-card {
  
@@ -404,4 +393,140 @@ font-size: 40px;
 line-height: 44px;
 
 }
+}
+@media only screen and (min-width: 992px){
+  .blackbackground-headphone-image{
+     background-image: url(/images/desktop-home/image-hero.jpg);
+     position: relative;
+    width: 100%;
+    height: 10vh;
+    margin-left: auto;
+    margin-right: auto;
+    background-position: bottom center;
+    
+    justify-content: flex-start;
+    background-size: cover;
+     
+  }
+  .megatron-text-container, .leading-text{
+    text-align: left;
+    margin-left: 10%;
+    width: 60%;
+    }
+    .leading-text{
+      margin-left: 0;
+    }
+    .sub-text{
+      padding: 1rem 0;
+      padding-right: 50%;
+    }
+    .leading-text{
+      font-size: 56px;
+      line-height: 58px;
+      letter-spacing: 2px;
+      
+    }
+    .desktop-img {
+      display: block;
+    }
+     .header-absolute-image-mobile{
+      display: none;
+     }
+  .image-positioning{
+    width: 170px;
+
+  }
+  .preview-boxes{
+    display: flex;
+    width: 35%;
+  }
+ .home-page-product-action-page{
+   display: flex;
+   width: 80%;
+   padding-left: 5%;
+   align-items: center;
+   justify-content: space-between;
+ }
+ .product-preview{
+   width: 80%;
+ }.home-page-product-first-container{
+   min-width: max-content;
+ }
+  .product.action.page{
+    position: relative;
+    z-index: 100;
+    height:493px;
+    display: flex;
+    align-items: flex-end;
+    justify-content:center;
+    padding-left:25%;
+    margin-bottom: -8px;
+  }
+  .outermost-circle{
+    width: 440px;
+    height: 440px;
+    top: 20%;
+}
+   .inner-circle{
+     width: 400px;
+     height: 400px;
+   }
+   
+  .home-page-product-page{
+   padding-top: 35px;
+  }
+    
+  
+   .zx7-speaker-products{
+    background-image: url(/images/desktop-home/image-speaker-zx7.jpg);
+ 
+    width: 80%;
+   
+}
+ .container-for-black-earphone{
+   width: 80%;
+   padding-top: 2%;
+   gap: 10px;
+ }
+ .black-earphones-case-picture-tablet{
+   display: none;
+ }
+ .black-earphones-desktop{
+   
+   height: 100%;
+   width: 100%;
+   border-radius: 7px;
+   
+ }
+ .black-earphones-case{
+   width: 50%;
+   height: 90%;
+ }
+ .yx1-earphone-card {
+   width: 50%;
+   margin-top:0;
+   
+ }
+ .tab-pic{
+   display: none;
+ }
+ .home-page-man-picture{
+  flex-direction: row-reverse;
+  width: 80%;
+  gap: 10px;
+  
+ }
+ .content-header,.content-text{
+   text-align: left !important;
+   margin-left: 0;
+   padding: 0;
+   padding-right: 3rem;
+ }
+ .card-body{
+  padding: 0;
+ }
+ .home-page-man-picture img, .conten-holder {
+   width: 50%;
+   border-radius:7px;
+ }
 }
