--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -255,7 +255,7 @@ input[type=number] {
  .product-grandtotal-box {
    background-color: #f1f1f1;
    border-radius: 7px 7px 0 0;
-    width: 90%;
+   width: 90%;
    margin: 0 auto;
    
 
@@ -367,4 +367,40 @@ input[type=number] {
    .eMoney{
      width: 50%;
    }
+   .tablet-size{
+     width:700px !important;
+     margin-left:auto;
+     margin-right: auto;
+     max-width:720px;
+     display: flex;
+   }
+   .the-product-image-container{
+     display: flex;
+     width: 90%;
+     margin: auto;
+     padding: 20px 0;
+   }
+   .product-grandtotal-box{
+    border-radius: 7px 0 0 7px;
+   }
+   .the-grand-total-container{
+     width: 60%;
+     border-radius: 0 7px 7px 0;
+     height: 148px;
+     padding-top: 20px;
+   }
+   .checkout-modal-footer{
+     padding-bottom: 20px;
+   }
+   
+ .check-out-modal-btn{
+   width: 83%;
+ }
+  .checkout-modal-body-main-text{
+   font-size: 32px;
+   font-weight: bold;
+   padding-right: 35%;
+  }
+  
+ 
  }
