--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,9 +26,14 @@ body {
 @media only screen and (min-width: 620px){
 body{
   
-  max-width: 800px;
+  max-width: 992px;
    overflow-x: hidden;
 }
 }
-
+@media only screen and (min-width: 992px)
+  { 
+    body{
+      max-width: 100vw;
+    }
+  }
 
