--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -1,16 +1,17 @@
 .footer-container 
  .footer-colored-line 
- h2.footer-main-text audiophile 
- nav.footer-nav-links
-  ul.footer-list-items 
-    li 
-      a(href="#") HOME
-    li
-      a(href="#") HEADPHONES
-    li
-      a(href="#") SPEAKERS
-    li
-      a(href="#") EARPHONES 
+ .desktop-footer-layout
+  h2.footer-main-text audiophile 
+  nav.footer-nav-links
+    ul.footer-list-items 
+      li 
+        a(href="#") HOME
+      li
+        a(href="#") HEADPHONES
+      li
+        a(href="#") SPEAKERS
+      li
+        a(href="#") EARPHONES 
  p.footer-sub-text Audiophile is an all in one stop to fulfill your audio needs. We're a small team of music lovers and sound specialists who are devoted to helping yu get the most out of personal audio. Come and visit our demo facility - we're open 7 days a week.
  .footer-copyright-container
   .copyright-container
