--- a/views/_header.pug
+++ b/views/_header.pug
@@ -54,15 +54,16 @@
         .row
           .col-sm-6.col-10
             button.see-product-button.checkout-button-cart(type='button' data-bs-dismiss='modal') CHECKOUT
-header#phone-nav-container
- nav.navbar.navbar-expand-xxl.phone-nav.navbar-dark.nav-bar-size
+header#phone-nav-container.the-header-box
+ nav.navbar.navbar-expand-lg.phone-nav.navbar-dark.nav-bar-size
   button.navbar-toggler(type='button', data-toggle='collapse', data-bs-target='#navmenu' data-bs-toggle='collapse')
-   span.navbar-toggler-icon.harmburger-menu 
-  a.navbar-brand.brand-name(href='#') audiophile 
+   span.navbar-toggler-icon.harmburger-menu
+  .logo-box  
+    a.navbar-brand.brand-name(href='#') audiophile 
   button.cart-button(type='button' data-bs-toggle='modal' data-bs-target='#cart')
    svg.bi.bi-cart(xmlns='http://www.w3.org/2000/svg' width='27' height='25' fill='currentColor' viewbox='0 0 16 16')
     path(d='M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z') 
-  #navmenu.collapse.navbar-collapse.mt-2.mt-lg-0
+  #navmenu.collapse.navbar-collapse.mt-2.mt-lg-0.wide-screen-tab
     ul.navbar-nav 
      li.nav-item  
       a.nav-link(href='#') HOME
