--- a/views/_home-page.pug
+++ b/views/_home-page.pug
@@ -4,27 +4,38 @@
     h1.leading-text XX99 MARK II HEADPHONES 
     p.sub-text Experience natural, lifelike audio and exceptional build quality made for the passionate music enthusiast.
     button.homepage-button.see-product-button SEE PRODUCT
+
 .product-preview 
-  img.headphones(src='/images/product-xx99-mark-one-headphones/mobile/image-category-page-preview_ccexpress.png', alt='image of headphones')
-  .headphones-preview-container.preview-containers 
-    h2.headphones-preview-header.preview-headers HEADPHONES 
-    a.headphones-preview-link.preview-anchor(href='#') SHOP 
-      span &gt;
-  img.speakers(src='/images/product-zx9-speaker/mobile/image-product_ccexpress.png')  
-  .speakers-preview-container.preview-containers  
-    h2.speakers-preview-header.preview-headers SPEAKERS 
-    a.speakers-preview-link.preview-anchor(href='#') SHOP 
-      span &gt;
-  img.earphones(src='/images/product-yx1-earphones/mobile/image-category-page-preview_ccexpress (1).png')
-  .earphones-preview-container.preview-containers  
-    h2.earphones-preview-header.preview-headers EARPHONES 
-    a.earphones-preview-link.preview-anchor(href='#') SHOP 
-      span &gt;
-.home-page-product-action-page 
-  .outermost-circle 
-    .inner-circle 
-  .product.action.page
-    img.product-page-speaker(src='/images/product-zx9-speaker/mobile/image-product_ccexpress.png')
+  .preview-boxes
+    img.headphones.header-absolute-image-mobile.image-positioning(src='/images/product-xx99-mark-one-headphones/mobile/image-category-page-preview_ccexpress.png', alt='image of headphones')
+    img.headphones.desktop-img.image-positioning(src='/images/shared/desktop/image-category-thumbnail-headphones.png', alt='image of headphones')
+    .headphones-preview-container.preview-containers 
+      h2.headphones-preview-header.preview-headers HEADPHONES 
+      a.headphones-preview-link.preview-anchor(href='#') SHOP 
+        span &gt;
+  .preview-boxes
+    img.speakers.header-absolute-image-mobile.image-positioning(src='/images/product-zx9-speaker/mobile/image-product_ccexpress.png')
+    img.speakers.desktop-img.image-positioning(src='/images/shared/desktop/image-category-thumbnail-speakers.png', alt='image of speakers')  
+    .speakers-preview-container.preview-containers  
+      h2.speakers-preview-header.preview-headers SPEAKERS 
+      a.speakers-preview-link.preview-anchor(href='#') SHOP 
+        span &gt;
+  .preview-boxes
+    img.earphones.header-absolute-image-mobile.image-positioning(src='/images/product-yx1-earphones/mobile/image-category-page-preview_ccexpress (1).png')
+    img.headphones.desktop-img.image-positioning(src='/images/shared/desktop/image-category-thumbnail-earphones.png', alt='image of headphones')
+    .earphones-preview-container.preview-containers  
+      h2.earphones-preview-header.preview-headers EARPHONES 
+      a.earphones-preview-link.preview-anchor(href='#') SHOP 
+        span &gt;
+.home-page-product-action-page
+  .home-page-product-first-container
+    .outermost-circle 
+      .inner-circle 
+   
+    .product.action.page
+      img.product-page-speaker.header-absolute-image-mobile(src='/images/product-zx9-speaker/mobile/image-product_ccexpress.png')
+      img.product-page-speaker.desktop-img(src='images/desktop-home/image-speaker-zx9.png')
+  .home-page-product-name-button
     h2.home-page-product-page ZX9 SPEAKER 
     p.home-page-product-page-subtext Upgrade to premium speakers that are phenomenally built to deliver truly remarkable sound. 
     button.product-page-button SEE PRODUCT
@@ -35,12 +46,14 @@
   .black-earphones-case 
     img.black-earphones-case-picture(src='/images/mobile1/image-earphones-yx1.jpg')
     img.black-earphones-case-picture-tablet(src='/images/tablet-home/image-earphones-yx1.jpg')
+    img.desktop-img.black-earphones-desktop(src='/images/desktop-home/image-earphones-yx1.jpg')
   .yx1-earphone-card 
     h2.yx1-header YX1 EARPHONES 
     button.yx1.see-product-button SEE PRODUCT
 .card.home-page-man-picture 
   img.card-img-top(src='/images/shared/mobile2/image-best-gear.jpg')
   img.tab-pic(src='/images/shared/tablet/image-best-gear.jpg')
+  img.desktop-img(src='/images/shared/desktop/image-best-gear.jpg')
   .card-body.conten-holder 
     h2.card-title.content-header BRINGING YOU THE #[span BEST] AUDIO GEAR
     p.card-text.content-text Located at the heart of New Your City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demostration rooms availabel for you to browse and experience a wide ranfe of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.
